src/snapshots/ontogen__snapshots__dto_simple_entity.snap
---
source: src/snapshots.rs
assertion_line: 183
expression: code
---
//! Generated by ontogen. DO NOT EDIT.

use schemars::JsonSchema;
use serde::Deserialize;

/// Input for creating a new Role.
#[derive(Debug, Clone, Deserialize, JsonSchema, specta::Type)]
pub struct CreateRoleInput {
    #[serde(default)]
    pub id: String,
    pub name: String,
    pub body: String,
}

/// Input for updating an existing Role.
/// All fields are optional; only provided fields are updated.
#[derive(Debug, Clone, Deserialize, JsonSchema, specta::Type)]
pub struct UpdateRoleInput {
    #[serde(default)]
    pub name: Option<String>,
    #[serde(default)]
    pub body: Option<String>,
}
