src/snapshots/ontogen__snapshots__markdown_frontmatter_complex_entity.snap
---
source: src/snapshots.rs
expression: code
---
//! Generated by ontogen. DO NOT EDIT.

use serde::{Deserialize, Serialize};

use crate::schema::Article;

/// Frontmatter view of a Article: every persisted field except the id (the
/// filename stem), the markdown body, and derived `has_many` views.
/// Relation ids are wikilink-encoded here and only here.
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ArticleFrontmatter {
    pub title: String,
    #[serde(default, skip_serializing_if = "Vec::is_empty")]
    pub tags: Vec<String>,
}

/// The frontmatter keys this type owns — the full field set, so
/// `merge_serialize` removes cleared options and preserves hand-added keys.
pub const ARTICLE_FM_FIELDS: &[&str] = &[
    "title",
    "tags",
];

/// The OKF `type` every Article record carries, stamped by the store on
/// write. Not a field above: reads tolerate it missing or different.
pub const ARTICLE_TYPE: &str = "Article";

impl ArticleFrontmatter {
    pub fn from_article(value: &Article) -> Self {
        Self {
            title: value.title.clone(),
            tags: value.tags.iter().map(|v| markdown_store::wikilink::encode(v)).collect(),
        }
    }

    pub fn into_article(self, id: String, body: String) -> Article {
        Article {
            id,
            body,
            title: self.title,
            tags: markdown_store::wikilink::strip_vec(self.tags),
        }
    }
}
