src/snapshots/ontogen__snapshots__markdown_open_vault_with_okf_options.snap
---
source: src/snapshots.rs
expression: code
---
/// Where the vault's records live, as configured at build time. A relative
/// path resolves against the working directory the program runs from, not
/// the crate root.
pub const VAULT_ROOT: &str = "data/vault";

/// Open the vault at `root` with the layout, id strategy, list cap and OKF
/// options configured at build time. Pass [`VAULT_ROOT`] to use the configured
/// location, or any other directory (a test's tempdir, say).
pub fn open_vault(root: impl Into<std::path::PathBuf>) -> markdown_store::VaultHandle {
    markdown_store::VaultHandle::new(root, markdown_store::VaultLayout::PerEntityDir, markdown_store::IdStrategy::SlugFromField("title".into()))
        .with_list_cap(10000)
        .with_okf(markdown_store::OkfPolicy {
            index: true,
            generated_by: Some("notes-kb/0.1.0".into()),
            ..Default::default()
        })
}
