src/snapshots/ontogen__snapshots__markdown_store_complex_entity.snap
---
source: src/snapshots.rs
expression: code
---
//! Generated by ontogen. DO NOT EDIT.

use crate::persistence::markdown::generated::article::{ARTICLE_FM_FIELDS, ArticleFrontmatter};
use crate::schema::Article;
use crate::schema::{AppError, ChangeOp, EntityKind};

use crate::store::Store;
use crate::store::hooks::article as hooks;

const ARTICLES_DIR: &str = "articles";
const ARTICLE_TYPE: &str = "Article";

/// Partial update for a Article. Only `Some` values are applied.
#[derive(Debug, Clone, Default)]
pub struct ArticleUpdate {
    pub title: Option<String>,
    pub tags: Option<Vec<String>>,
    pub body: Option<String>,
}

impl ArticleUpdate {
    fn apply(&self, article: &mut Article) {
        if let Some(title) = &self.title {
            article.title.clone_from(title);
        }
        if let Some(tags) = &self.tags {
            article.tags.clone_from(tags);
        }
        if let Some(body) = &self.body {
            article.body.clone_from(body);
        }
    }
}

impl From<crate::schema::UpdateArticleInput> for ArticleUpdate {
    fn from(input: crate::schema::UpdateArticleInput) -> Self {
        Self { title: input.title, tags: input.tags.map(markdown_store::wikilink::strip_vec), body: input.body }
    }
}

impl From<crate::schema::CreateArticleInput> for Article {
    fn from(input: crate::schema::CreateArticleInput) -> Self {
        Self {
            id: input.id,
            title: input.title,
            tags: markdown_store::wikilink::strip_vec(input.tags),
            body: input.body,
        }
    }
}

impl Store {
    pub async fn list_articles(&self, limit: Option<u64>, offset: Option<u64>) -> Result<Vec<Article>, AppError> {
        let mut articles = Vec::new();
        for (id, doc) in self.vault().entity(ARTICLES_DIR, ARTICLE_TYPE).read_all().map_err(AppError::from)? {
            let fm: ArticleFrontmatter = doc.deserialize().map_err(AppError::from)?;
            articles.push(fm.into_article(id, doc.body().to_string()));
        }
        let offset = offset.unwrap_or(0) as usize;
        let limit = limit.map(|l| l as usize).unwrap_or(usize::MAX);
        let mut articles: Vec<Article> = articles.into_iter().skip(offset).take(limit).collect();
        for entity in &mut articles {
            self.populate_article_relations(entity).await?;
        }
        Ok(articles)
    }

    pub async fn count_articles(&self) -> Result<u64, AppError> {
        Ok(self.vault().entity(ARTICLES_DIR, ARTICLE_TYPE).count().map_err(AppError::from)? as u64)
    }

    pub async fn get_article(&self, id: &str) -> Result<Article, AppError> {
        let doc = self
            .vault()
            .entity(ARTICLES_DIR, ARTICLE_TYPE)
            .read_opt(id)
            .map_err(AppError::from)?
            .ok_or_else(|| AppError::ArticleNotFound(id.to_string()))?;
        let fm: ArticleFrontmatter = doc.deserialize().map_err(AppError::from)?;
        let mut article = fm.into_article(id.to_string(), doc.body().to_string());
        self.populate_article_relations(&mut article).await?;
        Ok(article)
    }

    pub async fn create_article(&self, mut article: Article) -> Result<Article, AppError> {
        hooks::before_create(self, &mut article).await?;

        let mut doc = markdown_store::Document::new();
        doc.merge_serialize(&ArticleFrontmatter::from_article(&article), ARTICLE_FM_FIELDS).map_err(AppError::from)?;
        doc.set_body(article.body.clone());
        let id = self
            .vault()
            .entity(ARTICLES_DIR, ARTICLE_TYPE)
            .create(Some(article.id.as_str()).filter(|s| !s.is_empty()), None, doc)
            .map_err(AppError::from)?;

        let created = self.get_article(&id).await?;
        self.emit_change(ChangeOp::Created, EntityKind::Article, id);
        hooks::after_create(self, &created).await?;
        Ok(created)
    }

    pub async fn update_article(&self, id: &str, updates: ArticleUpdate) -> Result<Article, AppError> {
        let current = self.get_article(id).await?;
        hooks::before_update(self, &current, &updates).await?;

        self.vault()
            .entity(ARTICLES_DIR, ARTICLE_TYPE)
            .modify(id, |doc| {
                let fm: ArticleFrontmatter = doc.deserialize()?;
                let mut article = fm.into_article(id.to_string(), doc.body().to_string());
                updates.apply(&mut article);
                doc.merge_serialize(&ArticleFrontmatter::from_article(&article), ARTICLE_FM_FIELDS)?;
                doc.set_body(article.body);
                Ok(())
            })
            .map_err(AppError::from)?;

        let result = self.get_article(id).await?;
        self.emit_change(ChangeOp::Updated, EntityKind::Article, id.to_string());
        hooks::after_update(self, &result).await?;
        Ok(result)
    }

    pub async fn delete_article(&self, id: &str) -> Result<(), AppError> {
        hooks::before_delete(self, id).await?;

        match self.vault().entity(ARTICLES_DIR, ARTICLE_TYPE).remove(id) {
            Ok(()) => {}
            Err(markdown_store::Error::NotFound { .. }) => {
                return Err(AppError::ArticleNotFound(id.to_string()));
            }
            Err(e) => return Err(AppError::from(e)),
        }

        self.emit_change(ChangeOp::Deleted, EntityKind::Article, id.to_string());
        hooks::after_delete(self, id).await?;
        Ok(())
    }

    pub(crate) async fn populate_article_relations(
        &self,
        article: &mut crate::schema::Article,
    ) -> Result<(), crate::schema::AppError> {
        // many_to_many lists are authoritative in this record's own
        // frontmatter and were populated at parse time.
        let _ = &*self;
        let _ = &*article;
        Ok(())
    }
}
