src/snapshots/ontogen__snapshots__markdown_store_has_many_entity.snap
---
source: src/snapshots.rs
expression: code
---
//! Generated by ontogen. DO NOT EDIT.

use crate::persistence::markdown::generated::node::{NODE_FM_FIELDS, NodeFrontmatter};
use crate::schema::Node;
use crate::schema::{AppError, ChangeOp, EntityKind};

use crate::store::Store;
use crate::store::hooks::node as hooks;

const NODES_DIR: &str = "nodes";
const NODE_TYPE: &str = "Node";

/// Partial update for a Node. Only `Some` values are applied.
#[derive(Debug, Clone, Default)]
pub struct NodeUpdate {
    pub label: Option<String>,
    pub parent_id: Option<Option<String>>,
    pub contains: Option<Vec<String>>,
    pub body: Option<String>,
}

impl NodeUpdate {
    fn apply(&self, node: &mut Node) {
        if let Some(label) = &self.label {
            node.label.clone_from(label);
        }
        if let Some(parent_id) = &self.parent_id {
            node.parent_id.clone_from(parent_id);
        }
        if let Some(contains) = &self.contains {
            node.contains.clone_from(contains);
        }
        if let Some(body) = &self.body {
            node.body.clone_from(body);
        }
    }
}

impl From<crate::schema::UpdateNodeInput> for NodeUpdate {
    fn from(input: crate::schema::UpdateNodeInput) -> Self {
        Self {
            label: input.label,
            parent_id: input.parent_id.map(markdown_store::wikilink::strip_opt),
            contains: input.contains.map(markdown_store::wikilink::strip_vec),
            body: input.body,
        }
    }
}

impl From<crate::schema::CreateNodeInput> for Node {
    fn from(input: crate::schema::CreateNodeInput) -> Self {
        Self {
            id: input.id,
            label: input.label,
            parent_id: markdown_store::wikilink::strip_opt(input.parent_id),
            contains: markdown_store::wikilink::strip_vec(input.contains),
            body: input.body,
        }
    }
}

impl Store {
    pub async fn list_nodes(&self, limit: Option<u64>, offset: Option<u64>) -> Result<Vec<Node>, AppError> {
        let mut nodes = Vec::new();
        for (id, doc) in self.vault().entity(NODES_DIR, NODE_TYPE).read_all().map_err(AppError::from)? {
            let fm: NodeFrontmatter = doc.deserialize().map_err(AppError::from)?;
            nodes.push(fm.into_node(id, doc.body().to_string()));
        }
        let offset = offset.unwrap_or(0) as usize;
        let limit = limit.map(|l| l as usize).unwrap_or(usize::MAX);
        let mut nodes: Vec<Node> = nodes.into_iter().skip(offset).take(limit).collect();
        for entity in &mut nodes {
            self.populate_node_relations(entity).await?;
        }
        Ok(nodes)
    }

    pub async fn count_nodes(&self) -> Result<u64, AppError> {
        Ok(self.vault().entity(NODES_DIR, NODE_TYPE).count().map_err(AppError::from)? as u64)
    }

    pub async fn get_node(&self, id: &str) -> Result<Node, AppError> {
        let doc = match self.vault().entity(NODES_DIR, NODE_TYPE).read_opt(id) {
            Ok(Some(doc)) => doc,
            Ok(None) | Err(markdown_store::Error::InvalidId { .. }) => {
                return Err(AppError::NodeNotFound(id.to_string()));
            }
            Err(e) => return Err(AppError::from(e)),
        };
        let fm: NodeFrontmatter = doc.deserialize().map_err(AppError::from)?;
        let mut node = fm.into_node(id.to_string(), doc.body().to_string());
        self.populate_node_relations(&mut node).await?;
        Ok(node)
    }

    pub async fn create_node(&self, mut node: Node) -> Result<Node, AppError> {
        hooks::before_create(self, &mut node).await?;

        let contains = node.contains.clone();

        let mut doc = markdown_store::Document::new();
        doc.merge_serialize(&NodeFrontmatter::from_node(&node), NODE_FM_FIELDS).map_err(AppError::from)?;
        doc.set_body(node.body.clone());
        let id = match self.vault().entity(NODES_DIR, NODE_TYPE).create(
            &markdown_store::IdStrategy::Provided,
            Some(node.id.as_str()).filter(|s| !s.trim().is_empty()),
            None,
            doc,
        ) {
            Ok(id) => id,
            Err(markdown_store::Error::IdRequired { reason }) => return Err(AppError::NodeIdRequired(reason)),
            Err(markdown_store::Error::AlreadyExists { .. }) => return Err(AppError::NodeAlreadyExists(node.id)),
            Err(e) => return Err(AppError::from(e)),
        };

        for child_id in &contains {
            self.set_node_parent(child_id, Some(&id)).await?;
        }

        let created = self.get_node(&id).await?;
        self.emit_change(ChangeOp::Created, EntityKind::Node, id);
        hooks::after_create(self, &created).await?;
        Ok(created)
    }

    pub async fn update_node(&self, id: &str, updates: NodeUpdate) -> Result<Node, AppError> {
        let current = self.get_node(id).await?;
        hooks::before_update(self, &current, &updates).await?;

        let contains_changed = updates.contains.is_some();

        let contains_dropped: Vec<String> = match &updates.contains {
            Some(new_ids) => current.contains.iter().filter(|c| !new_ids.contains(c)).cloned().collect(),
            None => Vec::new(),
        };

        self.vault()
            .entity(NODES_DIR, NODE_TYPE)
            .modify(id, |doc| {
                let fm: NodeFrontmatter = doc.deserialize()?;
                let mut node = fm.into_node(id.to_string(), doc.body().to_string());
                updates.apply(&mut node);
                doc.merge_serialize(&NodeFrontmatter::from_node(&node), NODE_FM_FIELDS)?;
                doc.set_body(node.body);
                Ok(())
            })
            .map_err(AppError::from)?;

        if contains_changed {
            for child_id in updates.contains.iter().flatten() {
                self.set_node_parent(child_id, Some(id)).await?;
            }
            for child_id in &contains_dropped {
                self.set_node_parent(child_id, None).await?;
            }
        }

        let result = self.get_node(id).await?;
        self.emit_change(ChangeOp::Updated, EntityKind::Node, id.to_string());
        hooks::after_update(self, &result).await?;
        Ok(result)
    }

    pub async fn delete_node(&self, id: &str) -> Result<(), AppError> {
        hooks::before_delete(self, id).await?;

        match self.vault().entity(NODES_DIR, NODE_TYPE).remove(id) {
            Ok(()) => {}
            Err(markdown_store::Error::NotFound { .. } | markdown_store::Error::InvalidId { .. }) => {
                return Err(AppError::NodeNotFound(id.to_string()));
            }
            Err(e) => return Err(AppError::from(e)),
        }

        self.emit_change(ChangeOp::Deleted, EntityKind::Node, id.to_string());
        hooks::after_delete(self, id).await?;
        Ok(())
    }

    pub(crate) async fn populate_node_relations(
        &self,
        node: &mut crate::schema::Node,
    ) -> Result<(), crate::schema::AppError> {
        let mut contains = Vec::new();
        for (child_id, doc) in self.vault().entity(NODES_DIR, NODE_TYPE).read_all().map_err(AppError::from)? {
            if child_id == node.id {
                continue;
            }
            let child: NodeFrontmatter = doc.deserialize().map_err(AppError::from)?;
            if markdown_store::wikilink::strip_opt(child.parent_id).as_deref() == Some(node.id.as_str()) {
                contains.push(child_id);
            }
        }
        node.contains = contains;
        Ok(())
    }

    async fn set_node_parent(&self, child_id: &str, parent_id: Option<&str>) -> Result<(), AppError> {
        self.vault()
            .entity(NODES_DIR, NODE_TYPE)
            .modify(child_id, |doc| {
                let mut fm: NodeFrontmatter = doc.deserialize()?;
                fm.parent_id = parent_id.map(markdown_store::wikilink::encode);
                doc.merge_serialize(&fm, NODE_FM_FIELDS)
            })
            .map_err(AppError::from)
    }
}
