src/snapshots/ontogen__snapshots__markdown_store_has_many_required_parent.snap
---
source: src/snapshots.rs
expression: code
---
//! Generated by ontogen. DO NOT EDIT.

use ontogen_core::order::OrderBy;

use crate::persistence::markdown::generated::node::{NODE_FM_FIELDS, NodeFrontmatter};
use crate::schema::Node;
use crate::schema::{AppError, ChangeOp, EntityKind};

use crate::store::Store;
use crate::store::hooks::node as hooks;

const NODES_DIR: &str = "nodes";
const NODE_TYPE: &str = "Node";

/// Partial update for a Node. Only `Some` values are applied.
#[derive(Debug, Clone, Default)]
pub struct NodeUpdate {
    pub label: Option<String>,
    pub parent_id: Option<String>,
    pub contains: Option<Vec<String>>,
    pub body: Option<String>,
}

impl NodeUpdate {
    fn apply(&self, node: &mut Node) {
        if let Some(label) = &self.label {
            node.label.clone_from(label);
        }
        if let Some(parent_id) = &self.parent_id {
            node.parent_id.clone_from(parent_id);
        }
        if let Some(contains) = &self.contains {
            node.contains.clone_from(contains);
        }
        if let Some(body) = &self.body {
            node.body.clone_from(body);
        }
    }
}

impl From<crate::schema::UpdateNodeInput> for NodeUpdate {
    fn from(input: crate::schema::UpdateNodeInput) -> Self {
        Self {
            label: input.label,
            parent_id: input.parent_id.map(|v| markdown_store::wikilink::strip(&v)),
            contains: input.contains.map(markdown_store::wikilink::strip_vec),
            body: input.body,
        }
    }
}

impl From<crate::schema::CreateNodeInput> for Node {
    fn from(input: crate::schema::CreateNodeInput) -> Self {
        Self {
            id: input.id,
            label: input.label,
            parent_id: markdown_store::wikilink::strip(&input.parent_id),
            contains: markdown_store::wikilink::strip_vec(input.contains),
            body: input.body,
        }
    }
}

/// The fields `list_nodes` can order by. `name()` is the sort key the transports accept.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum NodeSortField {
    Id,
    Label,
}

impl ontogen_core::order::SortField for NodeSortField {
    const ALL: &'static [Self] = &[Self::Id, Self::Label];
    const ID: Self = Self::Id;

    fn name(self) -> &'static str {
        match self {
            Self::Id => "id",
            Self::Label => "label",
        }
    }
}

/// Orders `items` as `list_nodes` does on either backend: by each key of `order`, then by
/// id. A hand-written list that filters in memory sorts with this before it cuts a page.
pub fn sort_nodes(items: &mut [Node], order: &[OrderBy<NodeSortField>]) {
    let keys = ontogen_core::order::effective(order);
    items.sort_by(|a, b| {
        keys.iter()
            .map(|key| key.direction.apply(compare_nodes(a, b, key.field)))
            .find(|ord| ord.is_ne())
            .unwrap_or(std::cmp::Ordering::Equal)
    });
}

/// One ascending key of [`sort_nodes`]: `None` first, floats with `-0.0` equal to `0.0`, enums
/// by the string they are stored as, which is what SQL compares.
fn compare_nodes(a: &Node, b: &Node, field: NodeSortField) -> std::cmp::Ordering {
    match field {
        NodeSortField::Id => a.id.cmp(&b.id),
        NodeSortField::Label => a.label.cmp(&b.label),
    }
}

impl Store {
    pub async fn list_nodes(
        &self,
        order: &[OrderBy<NodeSortField>],
        limit: Option<u64>,
        offset: Option<u64>,
    ) -> Result<Vec<Node>, AppError> {
        let mut nodes = Vec::new();
        for (id, doc) in self.vault().entity(NODES_DIR, NODE_TYPE).read_all().map_err(AppError::from)? {
            let fm: NodeFrontmatter = doc.deserialize().map_err(AppError::from)?;
            nodes.push(fm.into_node(id, doc.body().to_string()));
        }
        sort_nodes(&mut nodes, order);
        let offset = offset.unwrap_or(0) as usize;
        let limit = limit.map(|l| l as usize).unwrap_or(usize::MAX);
        let mut nodes: Vec<Node> = nodes.into_iter().skip(offset).take(limit).collect();
        for entity in &mut nodes {
            self.populate_node_relations(entity).await?;
        }
        Ok(nodes)
    }

    pub async fn count_nodes(&self) -> Result<u64, AppError> {
        Ok(self.vault().entity(NODES_DIR, NODE_TYPE).count().map_err(AppError::from)? as u64)
    }

    pub async fn get_node(&self, id: &str) -> Result<Node, AppError> {
        let doc = match self.vault().entity(NODES_DIR, NODE_TYPE).read_opt(id) {
            Ok(Some(doc)) => doc,
            Ok(None) | Err(markdown_store::Error::InvalidId { .. }) => {
                return Err(AppError::NodeNotFound(id.to_string()));
            }
            Err(e) => return Err(AppError::from(e)),
        };
        let fm: NodeFrontmatter = doc.deserialize().map_err(AppError::from)?;
        let mut node = fm.into_node(id.to_string(), doc.body().to_string());
        self.populate_node_relations(&mut node).await?;
        Ok(node)
    }

    pub async fn create_node(&self, mut node: Node) -> Result<Node, AppError> {
        hooks::before_create(self, &mut node).await?;

        let contains = node.contains.clone();

        if !node.id.trim().is_empty() && node.contains.contains(&node.id) {
            return Err(AppError::NodeParentCycle(node.id.clone()));
        }

        for child_id in &node.contains {
            if !self.node_exists(child_id).await? {
                return Err(AppError::NodeNotFound(child_id.clone()));
            }
        }

        let mut doc = markdown_store::Document::new();
        doc.merge_serialize(&NodeFrontmatter::from_node(&node), NODE_FM_FIELDS).map_err(AppError::from)?;
        doc.set_body(node.body.clone());
        let id = match self.vault().entity(NODES_DIR, NODE_TYPE).create(
            &markdown_store::IdStrategy::SlugFromField("label".into()),
            Some(node.id.as_str()).filter(|s| !s.trim().is_empty()),
            Some(node.label.as_str()),
            doc,
        ) {
            Ok(id) => id,
            Err(markdown_store::Error::IdRequired { reason }) => return Err(AppError::NodeIdRequired(reason)),
            Err(markdown_store::Error::AlreadyExists { .. }) => return Err(AppError::NodeAlreadyExists(node.id)),
            Err(e) => return Err(AppError::from(e)),
        };

        for child_id in &contains {
            self.set_node_parent(child_id, &id).await?;
        }

        let created = self.get_node(&id).await?;
        self.emit_change(ChangeOp::Created, EntityKind::Node, id);
        hooks::after_create(self, &created).await?;
        Ok(created)
    }

    pub async fn update_node(&self, id: &str, updates: NodeUpdate) -> Result<Node, AppError> {
        let current = self.get_node(id).await?;
        hooks::before_update(self, &current, &updates).await?;

        let contains_changed = updates.contains.is_some();

        if updates.contains.as_ref().is_some_and(|ids| ids.iter().any(|c| c == id)) {
            return Err(AppError::NodeParentCycle(id.to_string()));
        }

        for child_id in updates.contains.iter().flatten() {
            if !self.node_exists(child_id).await? {
                return Err(AppError::NodeNotFound(child_id.clone()));
            }
        }

        let contains_dropped: Vec<String> = match &updates.contains {
            Some(new_ids) => current.contains.iter().filter(|c| !new_ids.contains(c)).cloned().collect(),
            None => Vec::new(),
        };
        if let Some(child_id) = contains_dropped.first() {
            return Err(AppError::NodeParentRequired(child_id.clone()));
        }

        self.vault()
            .entity(NODES_DIR, NODE_TYPE)
            .modify(id, |doc| {
                let fm: NodeFrontmatter = doc.deserialize()?;
                let mut node = fm.into_node(id.to_string(), doc.body().to_string());
                updates.apply(&mut node);
                doc.merge_serialize(&NodeFrontmatter::from_node(&node), NODE_FM_FIELDS)?;
                doc.set_body(node.body);
                Ok(())
            })
            .map_err(AppError::from)?;

        if contains_changed {
            for child_id in updates.contains.iter().flatten() {
                self.set_node_parent(child_id, id).await?;
            }
        }

        let result = self.get_node(id).await?;
        self.emit_change(ChangeOp::Updated, EntityKind::Node, id.to_string());
        hooks::after_update(self, &result).await?;
        Ok(result)
    }

    pub async fn delete_node(&self, id: &str) -> Result<(), AppError> {
        hooks::before_delete(self, id).await?;

        match self.vault().entity(NODES_DIR, NODE_TYPE).remove(id) {
            Ok(()) => {}
            Err(markdown_store::Error::NotFound { .. } | markdown_store::Error::InvalidId { .. }) => {
                return Err(AppError::NodeNotFound(id.to_string()));
            }
            Err(e) => return Err(AppError::from(e)),
        }

        self.emit_change(ChangeOp::Deleted, EntityKind::Node, id.to_string());
        hooks::after_delete(self, id).await?;
        Ok(())
    }

    pub(crate) async fn populate_node_relations(
        &self,
        node: &mut crate::schema::Node,
    ) -> Result<(), crate::schema::AppError> {
        let mut contains = Vec::new();
        for (child_id, doc) in self.vault().entity(NODES_DIR, NODE_TYPE).read_all().map_err(AppError::from)? {
            if child_id == node.id {
                continue;
            }
            let child: NodeFrontmatter = doc.deserialize().map_err(AppError::from)?;
            if markdown_store::wikilink::strip(&child.parent_id) == node.id {
                contains.push(child_id);
            }
        }
        node.contains = contains;
        Ok(())
    }

    async fn set_node_parent(&self, child_id: &str, parent_id: &str) -> Result<(), AppError> {
        self.vault()
            .entity(NODES_DIR, NODE_TYPE)
            .modify(child_id, |doc| {
                let mut fm: NodeFrontmatter = doc.deserialize()?;
                fm.parent_id = markdown_store::wikilink::encode(parent_id);
                doc.merge_serialize(&fm, NODE_FM_FIELDS)
            })
            .map_err(AppError::from)
    }

    pub(crate) async fn node_exists(&self, id: &str) -> Result<bool, AppError> {
        match self.vault().entity(NODES_DIR, NODE_TYPE).read_opt(id) {
            Ok(doc) => Ok(doc.is_some()),
            Err(markdown_store::Error::InvalidId { .. }) => Ok(false),
            Err(e) => Err(AppError::from(e)),
        }
    }
}
