src/snapshots/ontogen__snapshots__seaorm_entity_and_conversion_with_integer_primitives.snap
---
source: src/snapshots.rs
expression: "format!(\"// === Counter entity ===\\n{entity_code}\\n// === Counter conversion ===\\n{conversion_code}\")"
---
// === Counter entity ===
//! Generated by ontogen. DO NOT EDIT.

use sea_orm::entity::prelude::*;

#[derive(Clone, Debug, PartialEq, DeriveEntityModel)]
#[sea_orm(table_name = "counters")]
pub struct Model {
    #[sea_orm(primary_key, auto_increment = false)]
    pub id: String,
    pub hits: i64,
    pub peak: Option<i64>,
    pub bytes: i64,
    pub quota: Option<i64>,
    pub body: String,
}

#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
pub enum Relation {
}

impl ActiveModelBehavior for ActiveModel {}

// === Counter conversion ===
//! Generated by ontogen. DO NOT EDIT.

use crate::persistence::db::entities::counter as entity;
use crate::schema::{AppError, Counter};

impl Counter {
    pub fn from_model(model: &entity::Model) -> Result<Self, AppError> {
        Ok(Self {
            id: model.id.clone(),
            hits: u32::try_from(model.hits).map_err(|_| {
                AppError::DbError(format!("Counter.hits: stored value {} is out of range for u32", model.hits))
            })?,
            peak: model
                .peak
                .map(|v| {
                    u32::try_from(v).map_err(|_| {
                        AppError::DbError(format!("Counter.peak: stored value {v} is out of range for u32"))
                    })
                })
                .transpose()?,
            bytes: usize::try_from(model.bytes).map_err(|_| {
                AppError::DbError(format!("Counter.bytes: stored value {} is out of range for usize", model.bytes))
            })?,
            quota: model
                .quota
                .map(|v| {
                    usize::try_from(v).map_err(|_| {
                        AppError::DbError(format!("Counter.quota: stored value {v} is out of range for usize"))
                    })
                })
                .transpose()?,
            body: model.body.clone(),
        })
    }

    pub fn to_active_model(&self) -> Result<entity::ActiveModel, AppError> {
        use sea_orm::Set;

        Ok(entity::ActiveModel {
            id: Set(self.id.clone()),
            hits: Set(i64::from(self.hits)),
            peak: Set(self.peak.map(i64::from)),
            bytes: Set(i64::try_from(self.bytes).map_err(|_| {
                AppError::DbError(format!("Counter.bytes: value {} is out of range for i64", self.bytes))
            })?),
            quota: Set(self
                .quota
                .map(|v| {
                    i64::try_from(v)
                        .map_err(|_| AppError::DbError(format!("Counter.quota: value {v} is out of range for i64")))
                })
                .transpose()?),
            body: Set(self.body.clone()),
        })
    }
}
