src/snapshots/ontogen__snapshots__seaorm_entity_with_belongs_to.snap
---
source: src/snapshots.rs
expression: code
---
//! Generated by ontogen. DO NOT EDIT.

use ::sea_orm::entity::prelude::*;

#[derive(Clone, Debug, PartialEq, DeriveEntityModel)]
#[sea_orm(table_name = "comments")]
pub struct Model {
    #[sea_orm(primary_key, auto_increment = false)]
    pub id: String,
    pub post_id: Option<String>,
    pub body: String,
}

#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
pub enum Relation {
    #[sea_orm(
        belongs_to = "super::post::Entity",
        from = "Column::PostId",
        to = "super::post::Column::Id"
    )]
    PostId,
}

impl ActiveModelBehavior for ActiveModel {}
